# resolveai

./: README.md
Resolve-AI/: main.py  pyproject.toml
Resolve-AI/backend/: main.py  tem.py  tool.py
Resolve-AI/frontend/: com.html  complaint.html  index.html  login.html  myticket.html
Resolve-AI/frontend./: index.html
